--- a/cocktails/static/templates/index.html
+++ b/cocktails/static/templates/index.html
@@ -6,6 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lora|Passion+One' rel='stylesheet' type='text/css'>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static "js/styles/cocktails.css" %}">
+    {% csrf_token %}
 
   </head>
   <body>
